# LiKL-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  READM.md  README.md
cmake/: FindGlog.cmake
configs/: likl.yaml
example/: test_likl.cpp
include/likl/: common_data_type.h  config.h
include/likl/feature/: likl_extractor.h  line_matcher.h  tensorrt_infer.h
include/likl/param/: feature_param.h  param.h
include/likl/utils/: nms.h  timer.h  vis.h
src/feature/: CMakeLists.txt  likl_extractor.cpp  line_matcher.cpp  tensorrt_infer.cpp
src/param/: feature_param.cpp
src/utils/: nms.cpp  vis.cpp
